2002-02-19  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-pcweb-column.el: New file.

2002-02-14  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-modeline-ssl-image-status-on)
	(w3m-modeline-ssl-status-off): New constants.
	(w3m-current-ssl): New buffer local variable.
	(w3m-clear-local-variables, w3m-copy-local-variables): Handling
	`w3m-current-ssl'.
	(w3m-w3m-attributes): When detect `W3m-ssl-certificate:' header,
	set `w3m-current-ssl'. Skip reading of folded lines of each
	header.
	(w3m-buffer-setup): Display SSL indicator at mode-line.
	(w3m-about-header): Display SSL information when exist
	`W3m-ssl-certificate:' header.

2002-02-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-optional-headers): Add
	`x-mail-count'.

2002-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-read-file-name): Strip the query part from a default
	file name.
	(w3m-download): Ditto.
	(w3m-url-components-regexp): Move forward.

	* mime-w3m.el: Always require `font' under XEmacs.

	* shimbun/sb-debian.el (shimbun-debian-groups): Add debian-med,
	debian-newmaint-discuss, debian-qa-packages, debian-ssh,
	debian-user-de and debian-user-german.

2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-async-exec): Default to nil under MacOS X.

2002-02-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-setup-favicon): Fix handling of
	`w3m-about-xxxx-favicon'.

2002-02-10  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-ruby.el (shimbun-make-contents): Bug fixed.

2002-02-10  Takaaki MORIYAMA  <aka@iris.eonet.ne.jp>

	* shimbun/sb-ruby.el (shimbun-get-headers): Fixed the regexp.

2002-02-10  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-debian.el (shimbun-debian-groups): Add `debian-med'.

2002-02-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Fix the last
	change.

2002-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
